Fri Sep 11 04:42:27 GMT 2015  Olly Betts <olly@survex.com>

	* index_file.cc,index_file.h: Factor out index_add_document() function.

Thu Sep 10 20:43:47 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am,index_file.cc,index_file.h,omindex.cc: Refactor to start
	  to split out the code to index a file.

Thu Sep 10 07:30:25 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac,docs/Makefile.am: Fix generation of overview.rst when
	  srcdir != builddir.

Thu Sep 10 05:56:12 GMT 2015  Olly Betts <olly@survex.com>

	* omindex.cc: Use SAMPLE_SIZE in help text rather than literal 512.
	  Add '--title-size' option.

Wed Sep 09 04:28:43 GMT 2015  Olly Betts <olly@survex.com>

	* omindex.cc: Fix comment typo.

Tue Sep 08 04:31:51 GMT 2015  Olly Betts <olly@survex.com>

	* docs/omegascript.rst,query.cc: Fix documentation of $last to say
	  it's the MSet index *one beyond* the end of the current page.
	  Reported by Andrew Chilton.

Wed Sep 02 07:10:31 GMT 2015  Olly Betts <olly@survex.com>

	* docs/overview.rst: SVG extraction is built-in too.

Wed Sep 02 02:28:45 GMT 2015  Olly Betts <olly@survex.com>

	* docs/.gitignore,docs/Makefile.am,docs/overview.rst,gen-mimemap:
	  Generate the list of recognised mime types and of ignored extensions.

Tue Sep 01 07:22:38 GMT 2015  Olly Betts <olly@survex.com>

	* .gitignore: Update.

Tue Sep 01 07:14:46 GMT 2015  Olly Betts <olly@survex.com>

	* .gitignore,Makefile.am,gen-mimemap,mimemap.tokens,omindex.cc: Factor
	  out the default extension to MIME content-type mapping into a file,
	  and generate a static lookup table for use with keyword().

Sat Aug 15 17:24:07 GMT 2015  Olly Betts <olly@survex.com>

	* docs/cgiparams.rst: Document behaviour if xDB is not set.

Sat Aug 15 17:19:51 GMT 2015  Olly Betts <olly@survex.com>

	* docs/cgiparams.rst,query.cc: If xFILTERS is not set, don't force the
	  first page as that's unhelpful if someone fails to set it in their
	  template.
