@@ -1,3 +1,7 @@
+Fri Sep 11 04:42:53 GMT 2015  Olly Betts <olly@survex.com>
+
+	* omindex.cc: Tweak order of constant definitions.
+
 Fri Sep 11 04:42:27 GMT 2015  Olly Betts <olly@survex.com>
 
 	* index_file.cc,index_file.h: Factor out index_add_document() function.
